# zotero-mcp-server

./: .gitignore  README.md  pyproject.toml
scripts/: modal_pdf_converter.py  modal_server.py  pdf_convert.py  zotero_query.py
zotero_mcp/: db_server.py  server.py
zotero_mcp/tests/: conftest.py  test_integration_server.py  test_server.py
